// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordValidationsSection snapshot test should render correct ui when password doesn't match the criterias 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 75,
        }
      }
    >
      <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#e0e0e0;}.b{fill:#fff;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
        height={18}
        width={18}
      />
    </View>
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#2A2E43",
              "fontFamily": "Roboto-Regular",
            },
            Object {
              "alignSelf": "center",
              "color": "#78849E",
              "width": 525,
            },
          ]
        }
      >
        At least 8 characters)
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 75,
        }
      }
    >
      <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#e0e0e0;}.b{fill:#fff;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
        height={18}
        width={18}
      />
    </View>
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#2A2E43",
              "fontFamily": "Roboto-Regular",
            },
            Object {
              "alignSelf": "center",
              "color": "#78849E",
              "width": 525,
            },
          ]
        }
      >
        Contains a capital letter
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 75,
        }
      }
    >
      <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#e0e0e0;}.b{fill:#fff;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
        height={18}
        width={18}
      />
    </View>
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#2A2E43",
              "fontFamily": "Roboto-Regular",
            },
            Object {
              "alignSelf": "center",
              "color": "#78849E",
              "width": 525,
            },
          ]
        }
      >
        Contains a symbol (!, @, #, $, %, ^, &, *)
      </Text>
    </View>
  </View>
</View>
`;

exports[`PasswordValidationsSection snapshot test should render correct ui when password matches the criterias 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 75,
        }
      }
    >
      <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
        height={18}
        options={
          Object {
            "alignSelf": "center",
          }
        }
        width={18}
      />
    </View>
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#2A2E43",
              "fontFamily": "Roboto-Regular",
            },
            Object {
              "alignSelf": "center",
              "color": "#09B3A5",
              "width": 525,
            },
          ]
        }
      >
        At least 8 characters)
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 75,
        }
      }
    >
      <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
        height={18}
        options={
          Object {
            "alignSelf": "center",
          }
        }
        width={18}
      />
    </View>
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#2A2E43",
              "fontFamily": "Roboto-Regular",
            },
            Object {
              "alignSelf": "center",
              "color": "#09B3A5",
              "width": 525,
            },
          ]
        }
      >
        Contains a capital letter
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 75,
        }
      }
    >
      <<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><defs><style>.a{fill:#09b3a5;}.b{fill:#ebf0f3;}</style></defs><g transform="translate(0)"><circle class="a" cx="8" cy="8" r="8" transform="translate(0 0)"/><path class="b" d="M79.374,110.145,73.718,115.8l-2.775-2.775-1.409,1.409,4.184,4.184,7.064-7.065Z" transform="translate(-67.158 -106.382)"/></g></svg>
        height={18}
        options={
          Object {
            "alignSelf": "center",
          }
        }
        width={18}
      />
    </View>
    <View>
      <Text
        style={
          Array [
            Object {
              "color": "#2A2E43",
              "fontFamily": "Roboto-Regular",
            },
            Object {
              "alignSelf": "center",
              "color": "#09B3A5",
              "width": 525,
            },
          ]
        }
      >
        Contains a symbol (!, @, #, $, %, ^, &, *)
      </Text>
    </View>
  </View>
</View>
`;
